# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "drasi-bootstrap-mongodb"
version = "0.1.0"
edition.workspace = true
authors = ["Drasi Project"]
description = "MongoDB bootstrap provider for Drasi"
license.workspace = true
repository.workspace = true
keywords = ["drasi", "plugin", "bootstrap", "mongodb"]
categories.workspace = true

[lints]
workspace = true

[dependencies]
drasi-core.workspace = true
drasi-lib.workspace = true
mongodb = { version = "2.8.0", default-features = false, features = ["tokio-runtime"] }
bson = { version = "2.9.0", features = ["chrono-0_4"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.20"
anyhow = "1.0.79"
url = "2.5.0"
futures = "0.3.30"
uuid = { version = "1.7.0", features = ["v4"] }
ordered-float = "3.7.0"
rust_decimal = "1.34.3"

hex = "0.4.3"
base64 = "0.21.7"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
